unpackaged/main/default/objects/Account/fields/Fixed_Agent_Fee__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Agent_Fee__c</fullName>
    <label>Fixed Agent Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>