unpackaged/main/default/objects/Account/fields/Fixed_Agent_Fee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Agent_Fee_Notes__c</fullName>
    <label>Fixed Agent Fee Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>