unpackaged/main/default/objects/Account/fields/Flagship__c.field-meta.xml
<CustomField>
    <fullName>Flagship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this store a Flagship store</description>
    <inlineHelpText>Mark this checkbox if a Flagship store</inlineHelpText>
    <label>Flagship</label>
    <type>Checkbox</type>
</CustomField>