unpackaged/main/default/objects/Account/fields/Forms_Change__c.field-meta.xml
<CustomField>
    <fullName>Forms_Change__c</fullName>
    <formula>IF(Forms_Last_Quarter_LY__c &gt; 0, Forms_Last_Quarter__c / Forms_Last_Quarter_LY__c - 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forms % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>