unpackaged/main/default/objects/Account/fields/Forms_Last_Quarter_LY__c.field-meta.xml
<CustomField>
    <fullName>Forms_Last_Quarter_LY__c</fullName>
    <label>Forms Last Quarter LY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>