unpackaged/main/default/objects/Account/fields/Franchise__c.field-meta.xml
<CustomField>
    <fullName>Franchise__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the IKA or NKA In-Fill Head Office a Franchise?</inlineHelpText>
    <label>Franchise?</label>
    <type>Checkbox</type>
</CustomField>