unpackaged/main/default/objects/Account/fields/Full_Potential_SIS_annualised__c.field-meta.xml
<CustomField>
    <fullName>Full_Potential_SIS_annualised__c</fullName>
    <label>Full Potential SIS (annualised)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>