unpackaged/main/default/objects/Account/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>Country Manager</fullName>
            </value>
            <value>
                <fullName>EMT</fullName>
            </value>
            <value>
                <fullName>ETS</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>HR &amp; Office Admin</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>IT - Payments Services</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>OD</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Refund Agent</fullName>
            </value>
            <value>
                <fullName>Risk &amp; Compliance</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>