unpackaged/main/default/objects/Account/fields/FX_Guarantee_Margin__c.field-meta.xml
<CustomField>
    <fullName>FX_Guarantee_Margin__c</fullName>
    <label>FX Guarantee Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>