unpackaged/main/default/objects/Account/fields/FX_Mark_Up__c.field-meta.xml
<CustomField>
    <fullName>FX_Mark_Up__c</fullName>
    <label>FX Mark Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>