unpackaged/main/default/objects/Account/fields/FY_Budget_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>FY_Budget_Gross_Profit__c</fullName>
    <description>Field Used by Planet Payment Americas</description>
    <label>FY Budget Gross Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>