unpackaged/main/default/objects/Account/fields/GDPR__c.field-meta.xml
<CustomField>
    <fullName>GDPR__c</fullName>
    <label>GDPR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Final Letter</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>No Recipient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>