unpackaged/main/default/objects/Account/fields/Global_Account__c.field-meta.xml
<CustomField>
    <fullName>Global_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify global accounts for reporting - Saurabh 28/03/2022

https://planet.atlassian.net/browse/FSD-140524</description>
    <label>Global Account</label>
    <type>Checkbox</type>
</CustomField>