unpackaged/main/default/objects/Account/fields/Grandparent_Account__c.field-meta.xml
<CustomField>
    <fullName>Grandparent_Account__c</fullName>
    <formula>Parent.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grandparent Account</label>
    <type>Text</type>
</CustomField>