unpackaged/main/default/objects/Account/fields/Gross_Profit_current__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_current__c</fullName>
    <label>Gross Profit (current)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>