unpackaged/main/default/objects/Account/fields/Head_Office_Rank__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Rank__c</fullName>
    <label>Head Office Rank</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>