unpackaged/main/default/objects/Account/fields/Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy__c</fullName>
    <formula>IF( RecordType.Name =&quot;Shop&quot;,&quot;Shop&quot;,&quot;Head Office&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarchy</label>
    <type>Text</type>
</CustomField>