unpackaged/main/default/objects/Account/fields/Hoist_Product__c.field-meta.xml
<CustomField>
    <fullName>Hoist_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hoist Product</label>
    <type>Checkbox</type>
</CustomField>