unpackaged/main/default/objects/Account/fields/Hoist_Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Hoist_Sales_Representative__c</fullName>
    <description>Hoist</description>
    <label>Hoist Sales Representative</label>
    <length>100</length>
    <type>Text</type>
</CustomField>