unpackaged/main/default/objects/Account/fields/Hotel_Current_Payment_Provider__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Current_Payment_Provider__c</fullName>
    <description>Hoist</description>
    <label>Hotel Current Payment Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>