unpackaged/main/default/objects/Account/fields/If_Other_Please_Specify__c.field-meta.xml
<CustomField>
    <fullName>If_Other_Please_Specify__c</fullName>
    <label>If Other Please Specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>