unpackaged/main/default/objects/Account/fields/IKA__c.field-meta.xml
<CustomField>
    <fullName>IKA__c</fullName>
    <label>IKA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A. Lange &amp; Söhne</fullName>
            </value>
            <value>
                <fullName>Adidas AG</fullName>
            </value>
            <value>
                <fullName>Adolfo Dominguez</fullName>
            </value>
            <value>
                <fullName>Agent Provocateur</fullName>
            </value>
            <value>
                <fullName>Alaïa</fullName>
            </value>
            <value>
                <fullName>Alexander McQueen</fullName>
            </value>
            <value>
                <fullName>All Saints</fullName>
            </value>
            <value>
                <fullName>American Apparel</fullName>
            </value>
            <value>
                <fullName>Armani</fullName>
            </value>
            <value>
                <fullName>Asics</fullName>
            </value>
            <value>
                <fullName>Balenciaga</fullName>
            </value>
            <value>
                <fullName>Baume &amp; Mercier</fullName>
            </value>
            <value>
                <fullName>Berluti</fullName>
            </value>
            <value>
                <fullName>Bershka</fullName>
            </value>
            <value>
                <fullName>Bimba &amp; Lola</fullName>
            </value>
            <value>
                <fullName>Bottega Veneta</fullName>
            </value>
            <value>
                <fullName>Boucheron</fullName>
            </value>
            <value>
                <fullName>Calvin Klein</fullName>
            </value>
            <value>
                <fullName>Calzedonia</fullName>
            </value>
            <value>
                <fullName>Cartier</fullName>
            </value>
            <value>
                <fullName>Cath Kidston</fullName>
            </value>
            <value>
                <fullName>Celine</fullName>
            </value>
            <value>
                <fullName>Celio</fullName>
            </value>
            <value>
                <fullName>Chanel</fullName>
            </value>
            <value>
                <fullName>Chloé</fullName>
            </value>
            <value>
                <fullName>Christian Dior</fullName>
            </value>
            <value>
                <fullName>Christian Louboutin</fullName>
            </value>
            <value>
                <fullName>Christopher Kane</fullName>
            </value>
            <value>
                <fullName>Clarks</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>