unpackaged/main/default/objects/Account/fields/IKA_NKA__c.field-meta.xml
<CustomField>
    <fullName>IKA_NKA__c</fullName>
    <formula>TEXT(IKA__c)  &amp;  TEXT(NKA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IKA/NKA</label>
    <type>Text</type>
</CustomField>