unpackaged/main/default/objects/Account/fields/IKA_NKA_Rank__c.field-meta.xml
<CustomField>
    <fullName>IKA_NKA_Rank__c</fullName>
    <formula>TEXT(Planet_Ranking__c) &amp; &quot; &quot; &amp;  IKA_NKA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IKA/NKA Rank</label>
    <type>Text</type>
</CustomField>