unpackaged/main/default/objects/Account/fields/In_Store_Collateral_Rebranded__c.field-meta.xml
<CustomField>
    <fullName>In_Store_Collateral_Rebranded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-Store Collateral Rebranded</label>
    <type>Checkbox</type>
</CustomField>