unpackaged/main/default/objects/Account/fields/Indexation_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Indexation_Agreed__c</fullName>
    <label>Indexation Agreed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>