unpackaged/main/default/objects/Account/fields/Indexation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Indexation_Start_Date__c</fullName>
    <label>Indexation Start Date</label>
    <type>Date</type>
</CustomField>