unpackaged/main/default/objects/Account/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <label>Industry Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>IAD/ISO</fullName>
            </value>
            <value>
                <fullName>Processing Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>