unpackaged/main/default/objects/Account/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PII</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>DCC</fullName>
            </value>
            <value>
                <fullName>PCM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>