unpackaged/main/default/objects/Account/fields/Integrator__c.field-meta.xml
<CustomField>
    <fullName>Integrator__c</fullName>
    <description>Direct &amp; Gateway</description>
    <label>Integrator PMS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>