unpackaged/main/default/objects/Account/fields/Integrator_POS__c.field-meta.xml
<CustomField>
    <fullName>Integrator_POS__c</fullName>
    <label>Integrator POS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>