unpackaged/main/default/objects/Account/fields/Internal_Code__c.field-meta.xml
<CustomField>
    <fullName>Internal_Code__c</fullName>
    <label>Internal Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>