unpackaged/main/default/objects/Account/fields/Invoice_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Market_Share__c</fullName>
    <label>Invoice Market Share</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-25%</fullName>
            </value>
            <value>
                <fullName>25-50%</fullName>
            </value>
            <value>
                <fullName>50-75%</fullName>
            </value>
            <value>
                <fullName>75-99%</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>