unpackaged/main/default/objects/Account/fields/Invoice_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Prefix__c</fullName>
    <label>Invoice Prefix</label>
    <length>12</length>
    <type>Text</type>
</CustomField>