unpackaged/main/default/objects/Account/fields/Invoice_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Suffix__c</fullName>
    <label>Invoice Suffix</label>
    <length>12</length>
    <type>Text</type>
</CustomField>