unpackaged/main/default/objects/Account/fields/Is_Shop__c.field-meta.xml
<CustomField>
    <fullName>Is_Shop__c</fullName>
    <formula>IF(AND(RecordType.Name = &quot;Shop&quot;, TEXT(Type) = &quot;Active&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Shop</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>