unpackaged/main/default/objects/Account/fields/ITBS_Contact__c.field-meta.xml
<CustomField>
    <fullName>ITBS_Contact__c</fullName>
    <label>ITBS Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bernardo Vicente</fullName>
            </value>
            <value>
                <fullName>Charles Mardirossian</fullName>
            </value>
            <value>
                <fullName>Daniel Sanchez</fullName>
            </value>
            <value>
                <fullName>Isabelle Schmit</fullName>
            </value>
            <value>
                <fullName>Karel Serin</fullName>
            </value>
            <value>
                <fullName>Luca Calzoni</fullName>
            </value>
            <value>
                <fullName>Luis Guilherme</fullName>
            </value>
            <value>
                <fullName>Maurizio Simeone</fullName>
            </value>
            <value>
                <fullName>Richard Smith</fullName>
            </value>
            <value>
                <fullName>Samuel Montero</fullName>
            </value>
            <value>
                <fullName>Tobias Pecksteiner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>