unpackaged/main/default/objects/Account/fields/Jan_Value__c.field-meta.xml
<CustomField>
    <fullName>Jan_Value__c</fullName>
    <label>Jan Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>