unpackaged/main/default/objects/Account/fields/Joined_Date_DCC__c.field-meta.xml
<CustomField>
    <fullName>Joined_Date_DCC__c</fullName>
    <label>Joined Date DCC</label>
    <type>Date</type>
</CustomField>