unpackaged/main/default/objects/Account/fields/Joined_Date_Tax_Free__c.field-meta.xml
<CustomField>
    <fullName>Joined_Date_Tax_Free__c</fullName>
    <label>Joined Date Tax Free</label>
    <type>Date</type>
</CustomField>