unpackaged/main/default/objects/Account/fields/Jul_Value__c.field-meta.xml
<CustomField>
    <fullName>Jul_Value__c</fullName>
    <label>Jul Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>