unpackaged/main/default/objects/Account/fields/Jun_Value__c.field-meta.xml
<CustomField>
    <fullName>Jun_Value__c</fullName>
    <label>Jun Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>