unpackaged/main/default/objects/Account/fields/Local_Card_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Local_Card_Scheme__c</fullName>
    <label>Local Card Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bancontact</fullName>
            </value>
            <value>
                <fullName>Bankaxept</fullName>
            </value>
            <value>
                <fullName>Benefit cards</fullName>
            </value>
            <value>
                <fullName>Carte Bancaire</fullName>
            </value>
            <value>
                <fullName>Carte bancaire, loyalty cards</fullName>
            </value>
            <value>
                <fullName>Carte bancaire, loyalty cards, Cofinoga</fullName>
            </value>
            <value>
                <fullName>Dankort</fullName>
            </value>
            <value>
                <fullName>Girocard</fullName>
            </value>
            <value>
                <fullName>MB Way</fullName>
            </value>
            <value>
                <fullName>PagoBANCOMAT</fullName>
            </value>
            <value>
                <fullName>PostFinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>