unpackaged/main/default/objects/Account/fields/Local_Card_Scheme_of_non_cash__c.field-meta.xml
<CustomField>
    <fullName>Local_Card_Scheme_of_non_cash__c</fullName>
    <label>Local Card Scheme (% of non-cash)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>