unpackaged/main/default/objects/Account/fields/Mar_Value__c.field-meta.xml
<CustomField>
    <fullName>Mar_Value__c</fullName>
    <label>Mar Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>