unpackaged/main/default/objects/Account/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <label>Markup</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>