unpackaged/main/default/objects/Account/fields/Mass_Rollout__c.field-meta.xml
<CustomField>
    <fullName>Mass_Rollout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mass Rollout</label>
    <type>Checkbox</type>
</CustomField>