unpackaged/main/default/objects/Account/fields/Max_Version__c.field-meta.xml
<CustomField>
    <fullName>Max_Version__c</fullName>
    <label>Max Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>