unpackaged/main/default/objects/Account/fields/May_Value__c.field-meta.xml
<CustomField>
    <fullName>May_Value__c</fullName>
    <label>May Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>