unpackaged/main/default/objects/Account/fields/Merchant_Incentive_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Incentive_Scheme__c</fullName>
    <label>Merchant Incentive Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>