unpackaged/main/default/objects/Account/fields/Min_Version__c.field-meta.xml
<CustomField>
    <fullName>Min_Version__c</fullName>
    <label>Min Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>