unpackaged/main/default/objects/Account/fields/New_POS_Solution__c.field-meta.xml
<CustomField>
    <fullName>New_POS_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New POS Solution</label>
    <type>Checkbox</type>
</CustomField>