unpackaged/main/default/objects/Account/fields/New_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>New_Work_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Work Order</label>
    <type>Checkbox</type>
</CustomField>