unpackaged/main/default/objects/Account/fields/NKA__c.field-meta.xml
<CustomField>
    <fullName>NKA__c</fullName>
    <label>NKA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1.2.3</fullName>
            </value>
            <value>
                <fullName>Abiraame Jewellers</fullName>
            </value>
            <value>
                <fullName>Acemedicals</fullName>
            </value>
            <value>
                <fullName>Acturus</fullName>
            </value>
            <value>
                <fullName>Adrimar</fullName>
            </value>
            <value>
                <fullName>Agnes B</fullName>
            </value>
            <value>
                <fullName>Åhléns</fullName>
            </value>
            <value>
                <fullName>Alain Figaret</fullName>
            </value>
            <value>
                <fullName>Al Duca D&#39;Aosta</fullName>
            </value>
            <value>
                <fullName>Alfred Dunhill</fullName>
            </value>
            <value>
                <fullName>All Watches</fullName>
            </value>
            <value>
                <fullName>Alromaizan Gold &amp; Jewellery</fullName>
            </value>
            <value>
                <fullName>Anastasios Stephanides &amp; Son</fullName>
            </value>
            <value>
                <fullName>Answer</fullName>
            </value>
            <value>
                <fullName>APC</fullName>
            </value>
            <value>
                <fullName>Apostrophe</fullName>
            </value>
            <value>
                <fullName>Appollo Sellappas</fullName>
            </value>
            <value>
                <fullName>Aquascutum</fullName>
            </value>
            <value>
                <fullName>Aran Sweater Market</fullName>
            </value>
            <value>
                <fullName>Arcades Ponthieu</fullName>
            </value>
            <value>
                <fullName>Arcadia</fullName>
            </value>
            <value>
                <fullName>Argos</fullName>
            </value>
            <value>
                <fullName>Arnotts</fullName>
            </value>
            <value>
                <fullName>Arsenal FC</fullName>
            </value>
            <value>
                <fullName>Art de Suisse</fullName>
            </value>
            <value>
                <fullName>Atelier</fullName>
            </value>
            <value>
                <fullName>Atma</fullName>
            </value>
            <value>
                <fullName>Auchan</fullName>
            </value>
            <value>
                <fullName>Aurum Holdings</fullName>
            </value>
            <value>
                <fullName>Austin Reed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>