unpackaged/main/default/objects/Account/fields/NKA_Tier__c.field-meta.xml
<CustomField>
    <fullName>NKA_Tier__c</fullName>
    <label>NKA Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>