unpackaged/main/default/objects/Account/fields/Non_Settlement_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Non_Settlement_Exposure__c</fullName>
    <label>Non-Settlement Exposure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>