unpackaged/main/default/objects/Account/fields/Notice_Required_to_Cease_Release_Clause__c.field-meta.xml
<CustomField>
    <fullName>Notice_Required_to_Cease_Release_Clause__c</fullName>
    <label>Notice Required to Cease/Release Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>