unpackaged/main/default/objects/Account/fields/Nov_Value__c.field-meta.xml
<CustomField>
    <fullName>Nov_Value__c</fullName>
    <label>Nov Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>